# tera

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  KICKOFF.md  Makefile  PRD.md  README.md  TASKS.md  docker-compose.yml  jetson-update.sh  lefthook.yml  pyproject.toml  requirements-ci.txt  team.yml
.agents/: 00-team.md  10-architecture.md  21-agent.md  22-atak.md  23-hardware.md  24-security.md
.github/: pull_request_template.md
agent/: __init__.py  app.py  llm.py  mission_orchestrator.py  mission_schemas.py  orchestrator.py  schemas.py  trust_schemas.py
atak/: README.md  REBASE_RUNBOOK.md  __init__.py  bridge.py  cot.py
crypto/: __init__.py  cot_signer.py  ml_dsa_signer.py  sign_bench.py
data/: README.md  aois.yml  manifest.sha256
docs/: PRD.md  REVIEW.md  SUBMISSION_NOTES.md  api_inventory.md  architecture_v2.md  cyber_demo_script.md  cyber_mitigation_contribution.md  cyber_trust_boundary.md  demo-recording-plan.md  demo_google_io.md  issue-scrub-2026-05-03.md  route_query.schema.json  submission-checklist.md  trust_shield.md  v2_prd_emergency_response.md
eval/: __init__.py  prompts.yml  runner.py
infra/: audit_log_scroll.sh  cot_signed_scroll.sh  firewall_dev.ps1  gen_dev_cert.sh  hash_verify.sh  install_liboqs.sh  jetson_firewall.sh  protect_branch.sh  security_demo_monitors.sh  tcpdump_demo.sh
integrations/: __init__.py
llm_dev_kmh/: .dockerignore  Dockerfile  OVERALL SCHEMA KYLE .txt  README.md  app.py  docker-compose.yml  geo_algorithms.py  requirements.txt
models/: MANIFEST.yml
ontology/: __init__.py  entities.yml  loader.py  route_ontology.yml  system_prompt.md
prompts/: geo_query_data_sources_and_integration_instructions.txt  navigation_survival_routing_prompts.txt
routing/: __init__.py  osm_sqlite_features.py  valhalla_client.py
scripts/: catchup.sh  demo_voice.py  onboard.sh  seed-issues.sh  test_live_apis.py
security/: __init__.py  audit_log.py  cot_inject_demo.py  data_provenance.py  demo_proofs.md  model_integrity.py  parse_verify.py  pipeline.py  plan_guard.py  policy_gate.py  prompt_injection_tests.py  route_trust_score.py  structured_query_validator.py  superagent_integration.py  test_audit_log.py  test_model_integrity.py  test_parse_verify.py  test_plan_guard.py  test_security_regressions.py
tests/: test_atak_cot.py  test_audio_fx.py  test_entities.py  test_eval.py  test_glossary.py  test_hifld_adapter.py  test_llm.py  test_llm_dev_stream.py  test_mission_orchestrator_fallback.py  test_mission_schemas.py  test_nws_adapter.py  test_ontology.py  test_orchestrator.py  test_orchestrator_tts.py  test_osm_sqlite_features.py  test_profiles.py  test_prompt_tak_context.py  test_rationale.py  test_safe_browsing_adapter.py  test_shell_scripts.py  test_signer.py  test_smoke.py  test_trust_tool_fallback.py  test_url_risk.py  test_valhalla_client.py  test_voice_piper.py
voice/: __init__.py  audio_fx.py  glossary.py  phrases.py  piper_client.py  profiles.py  tts.py  (+1 more)
(+249 files in other folders)
