[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayfinder"
version = "0.0.1"
description = "Tactical Edge Route Agent — National Security Hackathon 2026"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hackathon Team" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "shapely>=2.0",
    "geojson>=3.1",
    "lxml>=5.2",
    "httpx>=0.27",
    "openai>=1.40",
    "anthropic>=0.40",
    "ollama>=0.3",
    "cryptography>=43.0",
    "python-multipart>=0.0.9",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "types-PyYAML",
    "types-jsonschema",
]
crypto = [
    # Requires `liboqs` system library installed first.
    # macOS: brew install liboqs
    # Ubuntu/Jetson: see infra/install_liboqs.sh
    "liboqs-python==0.10.0",
]
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
]

[tool.setuptools.packages.find]
include = ["agent*", "routing*", "atak*", "voice*", "crypto*", "security*", "eval*", "ontology*"]
exclude = ["tests*", "scripts*", "docs*", "figma*", "hardware*", "deploy*", "models*", "mesh*", "data*", "infra*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["agent", "routing", "atak", "voice", "crypto", "security", "eval", "ontology", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RET",
    "S",
    "T20",
    "ASYNC",
]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
# Satriyo's security/crypto demo `if __name__ == "__main__":` blocks legitimately
# print to stdout. Ignoring T201 in those modules.
"security/*" = ["T201"]
"crypto/*" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "routing", "atak", "voice", "crypto", "security", "eval", "ontology"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

# Satriyo's lanes were authored at a non-strict level. Track in GH issue
# "tighten mypy on crypto/ + security/" for post-MVP.
[[tool.mypy.overrides]]
module = "crypto.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "security.*"
ignore_errors = true
warn_unused_ignores = true
files = ["agent", "routing", "crypto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: slow tests (excluded from default run)",
    "integration: integration tests (require external services)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]
skips = ["B101"]
